# axhost

./: .codespellignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  release.ps1
cmake/: external-project.cmake  super-build.cmake  toolchain-msvc.cmake  toolchain-msvc.ps1
src/: as_classid.cc  as_classid.h  as_duration.cc  as_duration.h  class_spec.cc  class_spec.h  com_initialize_context.cc  com_initialize_context.h  command_line.cc  command_line.h  command_line_formatter.h  command_line_parser.cc  command_line_parser.h  config.h.in  connection_point.cc  connection_point.h  connection_point_container.cc  connection_point_container.h  container.cc  container.h  container_factory.cc  container_factory.h  container_factory_registry.cc  container_factory_registry.h  enum_connection_points.cc  enum_connection_points.h  enum_connections.cc  enum_connections.h  exit_condition_checker.cc  exit_condition_checker.h  external_connection.cc  external_connection.h  globals.cc  globals.h  help_dialog.cc  help_dialog.h  logging.cc  logging.h  main.cc  provide_class_info.cc  (+14 more)
